@@ -33,7 +33,7 @@ void animated_move_window(F_CMD_ARGS);
 void move_window_to_page(F_CMD_ARGS);
 void resize_window(F_CMD_ARGS);
 void ConstrainSize(FvwmWindow *, unsigned int *width, unsigned int *height,
-		   int xmotion, int ymotion);
+		   int xmotion, int ymotion, Bool roundUp);
 void Maximize(F_CMD_ARGS);
 
 #endif /* _MOVE_RESIZE_ */
